omnia timers working

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Watcher for the game PokeMMO"
+      content="Timers for renting out PC's by the hour. For Omnia BY Omnia"
     />
-    <title>PokeWatch</title>
+    <title>Omnia eSport</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
